--- a/views/loan-offer.ejs
+++ b/views/loan-offer.ejs
@@ -52,7 +52,7 @@
                 <p>Received Amount</p>
                 <p id="received-amount"><%= initialAmount %></p>
                 <p>Discount</p>
-                <p class="coupon">Click To Use Coupons <span class="next">&#10095;</span></p>
+                <a href="/coupon" class="coupon">Click To Use Coupons <span class="next">&#10095;</span></a>
                 <p>Interest</p>
                 <p id="interest-display"><% defaultCalculation.formatted %></p>
                 <p>Total Amount Due</p>
