--- a/views/coupon.ejs
+++ b/views/coupon.ejs
@@ -20,6 +20,7 @@
 
     .grand-container {
         margin-top: 3%;
+        width: 20rem;
     }
 
     .arrow-back {
@@ -44,17 +45,16 @@
         display: grid;
         grid-template-columns: 1fr 2fr;
         border-radius: 10px;
-        width: 30rem;
         border: 1.5px solid #cff3cd;
         border-bottom: none;
-        max-width: 500px;
+        max-width: 100%;
     }
 
     .coupon-days {
         /* padding: 40px 10px; */
         color: #299e29;
         font-weight: bold;
-        font-size: 2rem;
+        font-size: 1.5rem;
         border-radius: 5px;
         display: flex;
         justify-content: center;
@@ -102,7 +102,7 @@
     }
 
     .coupon-details {
-        font-size: 15px;
+        font-size: 12px;
         padding: 5px;
         border-bottom: 1px dashed #afaeae;
         border-radius: 10px;
@@ -116,10 +116,9 @@
         background-color: #e4f5e3;
         display: grid;
         grid-template-columns: 1fr 2fr;
-        width: 30rem;
         border-radius: 10px;
         border: 1.5px solid #cff3cd;
-        max-width: 500px;
+        max-width: 100%;
         margin-top: 10px;
     }
 </style>
