Adding cookie modules

--- a/public/styles/loanOfer.css
+++ b/public/styles/loanOfer.css
@@ -140,6 +140,11 @@ h2 {
     text-decoration: none;
 }
 
+.applied-coupon {
+    cursor: pointer;
+    color: #fca93d;
+}
+
 .next {
     margin-left: 8px;
 }
