--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -45,7 +45,7 @@
     }
 }
 
-@media (min-width: 425px) {
+@media (max-width: 425px) {
     .foot-container {
         padding: 8px 5px;
         left: 5%;
