--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -42,6 +42,7 @@
 
     .title-class {
         bottom: 48px;
+        font-size: 15px;
     }
 }
 
@@ -49,12 +50,14 @@
     .foot-container {
         padding: 8px 5px;
         left: 5%;
+        font-size: 15px;
     }
 
     .title-class {
         font-size: 0.6rem;
         gap: 10px;
         left: 6%;
+        font-size: 15px;
     }
 }
 
