--- a/public/styles/acc-style.css
+++ b/public/styles/acc-style.css
@@ -7,6 +7,7 @@
         display: flex;
         justify-content: center;
         font-family: sans-serif;
+        padding-bottom: 120px;
     }
 
     .main-container {
@@ -118,24 +119,9 @@
         cursor: pointer;
     }
 
-    .foot-container {
-        margin-top: 2rem;
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        grid-template-columns: 1fr 1fr 1fr;
-        column-gap: 60px;
-        background: #fff;
-    }
+    @media (max-width: 425px) {
 
-    .title-class {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        column-gap: 3rem;
-        margin-left: -13px;
-        color: #299e29;
-        font-size: 13px;
-        font-weight: 700;
-        margin-bottom: 10px;
-        margin-top: -5px;
+    .footer {
+        left: 6%;
     }
+}
