--- a/views/account.ejs
+++ b/views/account.ejs
@@ -14,54 +14,67 @@
         </div>
         <div class="container1">
             
-            <img src="/pics/coupon.webp" height="20px" alt="coupon-icon">
-            <p class="coupon">Coupons</p>
-            <button>&#10095;</button>
+        <img src="/pics/coupon.webp" height="20px" alt="coupon-icon">
+        <p class="coupon">Coupons</p>
+        <button>
+            &#10095;
+        </button>
             
             
-            <img src="/pics/profile.jpg" height="20px" alt="profile-icon">
-            <p class="profile">My Profile</p>
-            <button>&#10095;</button>
+        <img src="/pics/profile.jpg" height="20px" alt="profile-icon">
+        <p class="profile">My Profile</p>
+        <button>
+            &#10095;
+        </button>
             
             
-            <img src="/pics/bank-acc.jpg" height="20px" alt="bank-icon">
-            <p class="bank-acc">Bank Account</p>
-            <button>&#10095;</button>
+        <img src="/pics/bank-acc.jpg" height="20px" alt="bank-icon">
+        <p class="bank-acc">Bank Account</p>
+        <button>
+            &#10095;
+        </button>
             
             
-            <img src="/pics/other-info.jpg" height="20px" alt="">
-            <p class="info">Other Information</p>
-            <button>&#10095;</button>
+        <img src="/pics/other-info.jpg" height="20px" alt="">
+        <p class="info">Other Information</p>
+        <button>
+            &#10095;
+        </button>
             
-        </div>
-        <div class="container2">
-            
-            <img src="/pics/message.jpg" height="20px" alt="message-icon">
-                <p class="msg">Message</p>
-                <button>&#10095;</button>
-            
-            
-            <img src="/pics/help.jpg" height="20px" alt="help-icon">
-            <p class="help">Help</p>
-            <button>&#10095;</button>
-            
-            
-            <img src="/pics/about.png" height="20px" alt="about-icon">
-            <p class="about">About</p>
-            <button>&#10095;</button>
-            
-            <img src="/pics/contact us.png" height="20px" alt="contact-icon">
-            <p class="contact">Contact Us</p>
-            <button>&#10095;</button>
-        </div>
-            <div class="history">
-                <img src="/pics/history.jpg" height="20px" alt="history-icon">
-                <p>History</p>
-                <button>&#10095;</button>
-            </div>
-
-            <%- include("partials/footer") %>
     </div>
-    
+    <div class="container2">
+            
+        <img src="/pics/message.jpg" height="20px" alt="message-icon">
+            <p class="msg">Message</p>
+            <button>
+                &#10095;
+            </button>
+            
+            
+        <img src="/pics/help.jpg" height="20px" alt="help-icon">
+        <p class="help">Help</p>
+        <button>
+            &#10095;
+        </button>
+            
+            
+        <img src="/pics/about.png" height="20px" alt="about-icon">
+        <p class="about">About</p>
+        <button>&#10095;</button>
+            
+        <img src="/pics/contact us.png" height="20px" alt="contact-icon">
+        <p class="contact">Contact Us</p>
+        <button>&#10095;</button>
+    </div>
+        <div class="history">
+            <img src="/pics/history.jpg" height="20px" alt="history-icon">
+            <p>History</p>
+            <button>&#10095;</button>
+        </div>
+    </div>
+    <div class="footer">
+        <%- include("partials/footer") %>
+    </div>
+       
 </body>
 </html>
