--- a/views/loan-offer.ejs
+++ b/views/loan-offer.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="grand-container">
         <div class="offer-container">
-            <a href="/" class="arrow">🡰</a>
+            <a href="/" class="arrow">&#10094;</a>
             <p class="offer-text">Loan Offer</p>
         </div>
         <div class="main-container">
@@ -110,7 +110,7 @@
         <p class="note">Note: It is important that you repay your loan as at when due to maintain a good credit report
             and avoid rollover fee of 2% daily.</p>
 
-        <button class="take-loan">Take Loan</button>
+        <button class="take-loan"><%- include ("partials/repaymentSchedule") %>Take Loan</button>
     </div>
     <script src="/js/index.js"></script>
 </body>
