--- a/views/loan-offer.ejs
+++ b/views/loan-offer.ejs
@@ -110,8 +110,9 @@
         <p class="note">Note: It is important that you repay your loan as at when due to maintain a good credit report
             and avoid rollover fee of 2% daily.</p>
 
-        <button class="take-loan"><%- include ("partials/repaymentSchedule") %>Take Loan</button>
+        <button class="take-loan" id="take-loan-btn">Take Loan</button>
     </div>
+    <%- include ("partials/repaymentModal") %>
     <script src="/js/index.js"></script>
 </body>
 </html>
