--- a/views/coupon.ejs
+++ b/views/coupon.ejs
@@ -150,7 +150,7 @@
 </style>
 <body>
     <div class="grand-container">
-        <a href="/loan-offer" class="arrow-back">🡰</a>
+        <a href="/loan-offer" class="arrow-back">&#10094;</a>
         <h1>My Coupons</h1>
         <div class="main-container">
             <div class="container1">
