--- a/public/styles/loanOfer.css
+++ b/public/styles/loanOfer.css
@@ -222,6 +222,29 @@ h2 {
     background-color: #1e631e;
 }
 
+/* Modal dim background */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* the dim background */
+    z-index: 9999;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
+}
+
+.modal-overlay.show {
+    opacity: 1;
+    pointer-events: all;
+}
+
+body.modal-open {
+    overflow: hidden; /* This is to disable scroll */
+}
+
 @media (max-width: 768px) {
     body {
         padding: 10px;
