--- a/views/partials/repaymentModal.ejs
+++ b/views/partials/repaymentModal.ejs
@@ -16,8 +16,8 @@
     .repayment-modal {
         position: fixed;
         bottom: 100%;
-        left: 0;
-        width: 100%;
+        /* left: 0; */
+        width: 55vh;
         height: 50vh;
         background: #fff;
         border-top-left-radius: 20px;
