--- a/views/loan-offer.ejs
+++ b/views/loan-offer.ejs
@@ -112,6 +112,10 @@
 
         <button class="take-loan" id="take-loan-btn">Take Loan</button>
     </div>
+    <!-- Dimming overlay -->
+    <div class="modal-overlay" id="modal-overlay"></div>
+
+    <!-- Modal content -->
     <%- include ("partials/repaymentModal") %>
     <script src="/js/index.js"></script>
 </body>
