--- a/views/partials/repaymentModal.ejs
+++ b/views/partials/repaymentModal.ejs
@@ -133,42 +133,23 @@
 
     <div class="summary-box">
         <div>
-            <p class="installments">3</p>
+            <p class="installments" id="modal-installments" data-installments="<%= tenures.installments %>">
+                <%= tenures.installments %>
+            </p>
             <p class="label">Installment</p>
         </div>
         <div>
-            <p class="repay-amount">75000</p>
+            <p class="repay-amount" id="modal-total-amount" data-total="<%= parseInt(defaultCalculation.numeric) %>">
+                ₦<%= (parseInt(defaultCalculation.numeric) + numericAmount).toLocaleString() %>
+            </p>
             <p class="label">Repay Amount</p>
         </div>
     </div>
 
-    <div class="schedule">
-        <div class="schedule-item">
-            <div class="circle-line">
-                <span class="circle filled"></span>
-                <span class="line"></span>
-            </div>
-            <div class="details">
-                <p class="date">17 Aug 2025</p>
-                <p class="amount">25000</p>
-                <p class="label">1st installment</p>
-                <p class="label">Repay Amount</p>
-            </div>
-        </div>
-
-        <div class="schedule-item">
-            <div class="circle-line">
-                <span class="circle filled"></span>
-                <span class="line"></span>
-            </div>
-            <div class="details">
-                <p class="date">17 Aug 2025</p>
-                <p class="amount">25000</p>
-                <p class="label">1st installment</p>
-                <p class="label">Repay Amount</p>
-            </div>
-        </div>
-    </div>
+    <!-- Dynamic schedule will be injected here -->
+     <div class="schedule" id="schedule-list" data-start-date="<%= new Date().toISOString() %>">
+        <!-- JS will append schedule items here -->
+     </div>
     </div>
 </body>
 </html>
