--- a/views/loan-offer.ejs
+++ b/views/loan-offer.ejs
@@ -116,7 +116,7 @@
     <div class="modal-overlay" id="modal-overlay"></div>
 
     <!-- Modal content -->
-    <%- include ("partials/repaymentModal") %>
+    <%- include ("partials/repaymentModal", { defaultCalculation, numericAmount, tenures, defaultTenure }) %>
     <script src="/js/index.js"></script>
 </body>
 </html>
