--- a/views/partials/repaymentModal.ejs
+++ b/views/partials/repaymentModal.ejs
@@ -160,6 +160,7 @@
     @media screen and (max-width: 480px) {
         .repayment-modal {
             height: 65vh;
+            width: 20rem;
         }
 
         .circle {
