--- a/public/styles/loanOfer.css
+++ b/public/styles/loanOfer.css
@@ -315,6 +315,11 @@ body.modal-open {
 }
 
 @media (max-width: 480px) {
+    .grand-container {
+        left: 0;
+        right: 0;
+    }
+    
     .main-container {
         padding: 10px;
         width: 22rem;
