--- a/public/styles/loanOfer.css
+++ b/public/styles/loanOfer.css
@@ -39,7 +39,8 @@ body {
 
 .choose {
     text-align: center;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 .container {
@@ -319,7 +320,7 @@ body.modal-open {
         left: 0;
         right: 0;
     }
-    
+
     .main-container {
         padding: 10px;
         width: 22rem;
@@ -350,6 +351,10 @@ body.modal-open {
         width: 22rem;
         padding: 0 10px;
         font-size: 15px;
+    }
+
+    .take-loan {
+        width: 22rem;
     }
 }
 
