--- a/views/partials/repaymentModal.ejs
+++ b/views/partials/repaymentModal.ejs
@@ -123,6 +123,25 @@
         margin-bottom: 3px;
     }
 
+    .submit {
+        border-radius: 20px;
+        border: none;
+        background: #299e29;
+        margin-top: 20px;
+        padding: 10px 10px;
+        margin: auto;
+        color: white;
+        font-weight: 700;
+        width: 20rem;
+        margin-bottom: 30px;
+        cursor: pointer;
+        display: block;
+    }
+
+    .submit:hover {
+        background-color: #1e631e;
+    }
+
     @media screen and (max-width: 768px) {
         .repayment-modal {
             /* width: 100vw; */
@@ -204,6 +223,8 @@
         </div>
 
         <div class="schedule" id="schedule-list"></div>
+
+        <button class="submit" id="apply">Agree</button>
     </div>
 </body>
 </html>
