--- a/views/partials/repaymentModal.ejs
+++ b/views/partials/repaymentModal.ejs
@@ -146,7 +146,7 @@
 
     @media screen and (max-width: 768px) {
         .repayment-modal {
-            /* width: 100vw; */
+            width: 22rem;
             height: 60vh;
             padding: 15px;
             border-radius: 20px 20px 0 0;
@@ -177,12 +177,13 @@
 
         .submit {
             margin-top: 40px;
+            margin-left: 14px;
         }
     }
 
     @media screen and (max-width: 480px) {
         .repayment-modal {
-            height: 60vh;
+            height: 53vh;
             width: 20rem;
         }
 
@@ -211,6 +212,7 @@
         .submit {
             margin-top: 40px;
             margin-left: 3px;
+            font-size: 1rem;
         }
     }
 </style>
