--- a/views/partials/success.ejs
+++ b/views/partials/success.ejs
@@ -65,7 +65,8 @@
         <button class="home-btn" onclick="window.location.href='/'">Back</button>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <script>
         // Fire the confetti once on load
         window.onload = () => {
             confetti({
