--- a/views/account.ejs
+++ b/views/account.ejs
@@ -9,8 +9,8 @@
 <body>
     <div class="main-container">
         <div class="logo">
-            logo
-            phone
+            <img src="/pics/logo.png" height="40px" alt="Toyse Logo">
+            <p>Phone</p>
         </div>
         <div class="container1">
             
