--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,14 +22,14 @@
   justify-content: space-around;
   align-items: center;
   padding: 10px 0;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   transform: translateY(-50%);
 }
 
 .title-class {
   position: fixed;
   left: 43rem;
-  bottom: 80px;
+  bottom: 70px;
+  padding-bottom: 10px;
   width: 22rem;
   color: #299e29;
   display: flex;
