--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -109,7 +109,9 @@
         </a>
     </div>
     <div class="repay-menu">
-        <img width="40" height="40" src="https://img.icons8.com/external-outline-lafs/64/external-ic_repayment-dex-outline-lafs.png" alt="repayment"/>
+        <a href="/repayment-record">
+            <img width="40" height="40" src="https://img.icons8.com/external-outline-lafs/64/external-ic_repayment-dex-outline-lafs.png" alt="repayment"/>
+        </a>
     </div>
     <div class="account-menu">
         <a href="/account">
