--- a/views/repayment-record.ejs
+++ b/views/repayment-record.ejs
@@ -56,5 +56,7 @@
             <p class="status <%= loan.status %>"><strong>Status:</strong> <%= loan.status %></p>
         </div>
     <%}); %>
+
+    <%- include("partials/footer") %>
 </body>
 </html>
